--- a/server/package.json
+++ b/server/package.json
@@ -11,5 +11,8 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1"
+  },
+  "devDependencies": {
+    "puppeteer": "^24.36.1"
   }
 }
