--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.344.0",
     "mongoose": "^9.1.5",
     "nodemon": "^3.1.11",
+    "puppeteer": "^24.36.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.12.0"
