--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "puppeteer": "^24.36.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.12.0",
+    "react-virtuoso": "^4.18.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
