--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^9.1.5",
     "nodemon": "^3.1.11",
     "puppeteer": "^24.36.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.12.0",
