--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "server": "nodemon server/index.js",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "typecheck": "tsc --noEmit -p tsconfig.app.json"
-  },
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "server": "nodemon server/index.js",
+        "lint": "next lint",
+        "typecheck": "tsc --noEmit"
+    },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.13.4",
@@ -22,6 +22,7 @@
     "inquirer": "^13.2.1",
     "lucide-react": "^0.344.0",
     "mongoose": "^9.1.5",
+    "next": "^16.1.6",
     "nodemon": "^3.1.11",
     "puppeteer": "^24.36.1",
     "puppeteer-extra": "^3.3.6",
