--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "node-cron": "^4.2.1"
   },
   "devDependencies": {
     "puppeteer": "^24.36.1"
