--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,12 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "mongoose": "^8.1.1",
     "node-cron": "^4.2.1"
   },
