--- a/web-next/package.json
+++ b/web-next/package.json
@@ -13,6 +13,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-easy-crop": "^5.5.6",
     "react-virtuoso": "^4.18.1",
     "resend": "^6.9.1"
   },
