--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^8.1.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "nodemailer": "^8.0.1"
   },
   "devDependencies": {
     "puppeteer": "^24.36.1"
