--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
@@ -21,7 +22,8 @@
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^8.0.1"
+    "nodemailer": "^8.0.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "puppeteer": "^24.36.1"
